--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       "purpose": "any maskable"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/1698/1698535.png",
+      "src": "https://raw.githubusercontent.com/Muvvy/muvvy.github.io/refs/heads/main/logo_512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
